--- a/app/src/sass/components/popup.sass
+++ b/app/src/sass/components/popup.sass
@@ -224,5 +224,7 @@
     font-size: 19px
     line-height: 28px
     padding: 7px 25px 7px
+    @media screen and ( max-width: 767px )
+      font-size: 18px
 .transition
   transition: all 0.4s
