--- a/app/src/sass/components/pages/contacts.sass
+++ b/app/src/sass/components/pages/contacts.sass
@@ -42,6 +42,7 @@
       border-radius: 0px
       margin-bottom: 25px
       padding: 20px
+      background-color: transparent
   &-text
     font-size: 28px
     line-height: 32px
@@ -58,6 +59,8 @@
       font-size: 20px
       line-height: 26px
       padding: 0 50px
+    @media screen and ( max-width: 767px )
+      color: #000
 
   &-number
     font-size: 28px
@@ -70,6 +73,8 @@
     @media screen and ( max-width: 950px )
       font-size: 20px
       line-height: 26px
+    @media screen and ( max-width: 767px )
+      color: #000
 
   &-email
     font-size: 28px
@@ -83,6 +88,8 @@
     @media screen and ( max-width: 950px )
       font-size: 20px
       line-height: 26px
+    @media screen and ( max-width: 767px )
+      color: #000
     .underline
       border-bottom: 1px solid rgba(255,255,255,0.4)
       &:hover
