--- a/app/src/sass/components/pages/price.sass
+++ b/app/src/sass/components/pages/price.sass
@@ -91,6 +91,8 @@
     &__wrapper
       margin-top: 63px
       overflow-y: hidden
+      max-width: 1920px
+      margin: 63px auto 0px
     &__head
       th
         text-align: left
@@ -133,9 +135,12 @@
       @media screen and ( max-width: 1366px )
         font-size: 18px
         line-height: 24px
+      @media screen and ( max-width: 1100px )
+        font-size: 24px
+        line-height: 30px
       @media screen and ( max-width: 550px )
-        font-size: 16px
-        line-height: 20px
+        font-size: 20px
+        line-height: 26px
     &__cost
       font-size: 20px
       line-height: 26px
@@ -163,6 +168,7 @@
           margin-top: 15px
           .price-item__cost-label
             margin-right: 10px
+            color: #acacac
     .characteristics
       @include dfr()
       margin-top: 33px
