--- a/app/src/sass/components/pages/product.sass
+++ b/app/src/sass/components/pages/product.sass
@@ -4,11 +4,8 @@
     justify-content: center
     flex-wrap: wrap
   &-item
-    margin-right: 40px
-    margin-bottom: 15px
+    margin: 0 20px 15px 20px
     text-align: center
-    &:last-child
-      margin-right: 0px
     a
       font-size: 20px
       line-height: 26px
