--- a/app/src/sass/components/pages/shops.sass
+++ b/app/src/sass/components/pages/shops.sass
@@ -19,18 +19,16 @@
   &-map
     &__wrapper
       width: 770px
-      height: 760px
-      margin-top: 9px
+      height: calc(100vh - 100px)
       margin-left: auto
       margin-right: 30px
       @media screen and ( max-width: 1660px )
         width: 600px
-        height: 590px
       @media screen and ( max-width: 1366px )
         width: 530px
       @media screen and ( max-width: 1200px )
         width: 100%
-        height: 500px
+        height: 400px
         margin-right: 0px
       @media screen and ( max-width: 767px )
         height: 320px
@@ -163,3 +161,9 @@
       transition: all 0.4s
   &-btn
     margin-top: 31px
+.js-sticky-controller
+  width: 100%
+  height: 1px
+  position: absolute
+  bottom: 0
+  left: 0
