переделал таблицу с прайсом

--- a/app/src/sass/components/pages/price.sass
+++ b/app/src/sass/components/pages/price.sass
@@ -90,11 +90,13 @@
     width: 100%
     &__wrapper
       margin-top: 63px
-      overflow-y: hidden
       max-width: 1920px
       margin: 63px auto 0px
     &__head
-      th
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+      .price-head__item
         text-align: left
         font-size: 20px
         line-height: 26px
@@ -116,6 +118,9 @@
             display: none
   &-item
     border-top: 1px solid #e5e5e5
+    display: flex
+    flex-direction: row
+    justify-content: space-between
     &:last-child
       border-bottom: 1px solid #e5e5e5
     &__desc
@@ -172,10 +177,12 @@
     .characteristics
       @include dfr()
       margin-top: 33px
+      flex-wrap: wrap
       @media screen and ( max-width: 1366px )
         margin-top: 24px
       &-item
         margin-right: 58px
+        margin-bottom: 10px
         @media screen and ( max-width: 1366px )
           margin-right: 48px
         &:last-child
