--- a/app/src/sass/components/blocks/about.sass
+++ b/app/src/sass/components/blocks/about.sass
@@ -3,6 +3,10 @@
   position: relative
   overflow: hidden
   padding-bottom: 204px
+  @media screen and ( max-width: 950px )
+    padding-bottom: 100px
+  @media screen and ( max-width: 767px )
+    padding-bottom: 0px
   &__text
     max-width: 920px
     margin: 0 auto
